@@ -42,12 +42,9 @@ import bibliothek.gui.Orientation;
 public interface OrientingDockStation extends DockStation{
 	/**
 	 * Tells what orientation <code>child</code> has.
-	 * 
-	 * @param child
-	 *            a child of this station
+	 * @param child a child of this station
 	 * @return the orientation, never <code>null</code>
-	 * @throws IllegalArgumentException
-	 *             if <code>child</code> is not a child
+	 * @throws IllegalArgumentException if <code>child</code> is not a child
 	 */
 	public Orientation getOrientationOf( Dockable child );
 
@@ -56,19 +53,13 @@ public interface OrientingDockStation extends DockStation{
 	 * receives an event if the orientation of a child of this station changed.
 	 * The observer may or may not receive an event upon dropping a new
 	 * {@link Dockable} onto this station.
-	 * 
-	 * @param listener
-	 *            the new observer, not <code>null</code>
+	 * @param listener the new observer, not <code>null</code>
 	 */
-	public void addOrientingDockStationListener(
-			OrientingDockStationListener listener );
+	public void addOrientingDockStationListener( OrientingDockStationListener listener );
 
 	/**
 	 * Removes the observer <code>listener</code> from this station.
-	 * 
-	 * @param listener
-	 *            the listener to remove
+	 * @param listener the listener to remove
 	 */
-	public void removeOrientingDockStationListener(
-			OrientingDockStationListener listener );
+	public void removeOrientingDockStationListener( OrientingDockStationListener listener );
 }
