@@ -30,6 +30,11 @@
 
 package bibliothek.gui.dock.station;
 
+import java.util.ArrayList;
+import java.util.List;
+
+import bibliothek.gui.Dockable;
+import bibliothek.gui.Orientation;
 import bibliothek.gui.dock.StackDockStation;
 
 /**
@@ -37,14 +42,57 @@ import bibliothek.gui.dock.StackDockStation;
  * 
  * @author Benjamin Sigg
  */
-public class ToolbarTabDockStation extends StackDockStation{
+public class ToolbarTabDockStation extends StackDockStation implements OrientedDockStation{
+	private List<OrientingDockStationListener> listeners = new ArrayList<OrientingDockStationListener>( 5 );
+	private Orientation orientation = Orientation.VERTICAL;
+	
 	public ToolbarTabDockStation(){
 		setSmallMinimumSize(false);
 		setTitleIcon(null);
+		
+		new OrientationObserver( this ){
+			@Override
+			protected void orientationChanged( Orientation current ){
+				if( current != null ){	
+					setOrientation( current );
+				}
+			}
+		};
 	}
 
 	@Override
 	public String getFactoryID(){
 		return ToolbarTabDockStationFactory.FACTORY_ID;
+	}
+
+	@Override
+	public Orientation getOrientationOf( Dockable child ){
+		return orientation;
+	}
+
+	@Override
+	public void addOrientingDockStationListener( OrientingDockStationListener listener ){
+		listeners.add( listener );
+	}
+
+	@Override
+	public void removeOrientingDockStationListener( OrientingDockStationListener listener ){
+		listeners.remove( listener );
+	}
+
+	@Override
+	public void setOrientation( Orientation orientation ){
+		if( this.orientation != orientation ){
+			this.orientation = orientation;
+			OrientingDockStationEvent event = new OrientingDockStationEvent( this );
+			for( OrientingDockStationListener listener : listeners.toArray( new OrientingDockStationListener[ listeners.size() ] )){
+				listener.changed( event );
+			}
+		}
+	}
+
+	@Override
+	public Orientation getOrientation(){
+		return orientation;
 	}
 }
